merge (branches Acteurs/messaging-Fatima/Omar/router)  : regarder readme pour l'état actuel du projet et ce qu'il reste à faire